
syntax = "proto3";
package chat;
option go_package ="./chat";


message MessageReq{
    string body = 1;
  }
  
  message MessageRes{
    string body = 1;
  }
message MessageReqBye{
    string body = 1;
  }
  message MessageResBye{
    string body = 1;
  }
  service ChatService{
    rpc SayHello(MessageReq) returns(MessageRes){}
    rpc SayBye(MessageReqBye) returns(MessageResBye){}
  }

  
  
  
